<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="splash">SPLASHSCREEN</string>
    <string name="app_name">Essentials</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">Essentials</string>
    <string name="title_activity_compass">Essentials Compass</string>
    <string name="title_activity_unit_converter">Essentials UnitConverter</string>
    <string name="title_activity_currency_converter">Essentials CurrencyConverter</string>
    <string name="title_activity_notepad">Essentials Notepad</string>
    <string name="Back_Button">Back</string>

    <!-- Button Strings -->
    <string name="compasstit">Compass</string>
    <string name="convertapp">Unit Converter</string>
    <string name="currencyapp">Exchange Rate</string>
    <string name="notavail">This is currently Work In Progress</string>
    <string name="weather">Weather</string>
    <string name="note">NotePad</string>

    <!-- Converter -->
    <string name="unit1">Temperature</string>
    <string name="unit2">Weight</string>
    <string name="unit3">Length</string>
    <string name="unit4">Power</string>
    <string name="unit5">Energy</string>
    <string name="unit6">Velocity</string>
    <string name="unit7">Area</string>
    <string name="unit8">Volume</string>
    <string name="weightunitkg">Kg</string>
    <string name="weightunitgm">gm</string>
    <string name="weightunitlb">lb</string>
    <string name="weightunitounce">ounce</string>
    <string name="weightunitmg">mg</string>
    <string name="temperatureunitc">celcius</string>
    <string name="temperatureunitf">fahrenheit</string>
    <string name="lengthunitcm">cm</string>
    <string name="lengthunitm">m</string>
    <string name="lengthunitmm">mm</string>
    <string name="lengthunitkm">km</string>
    <string name="lengthunitfeet">ft</string>
    <string name="lengthunitmile">mile</string>
    <string name="lengthunitinch">inch</string>
    <string name="powerunithorseposer">horsepower</string>
    <string name="powerunitwatts">watts</string>
    <string name="powerunitkilowatts">kilowatts</string>
    <string name="energyunitcalories">calories</string>
    <string name="energyunitjoules">joules</string>
    <string name="energyunitkilocalories">kilocalories</string>
    <string name="velocityunitkmph">Km/hr</string>
    <string name="velocityunitmeterpers">m/s</string>
    <string name="velocityunitmilesperh">miles/hr</string>
    <string name="velocityunitfeetpers">feet/s</string>
    <string name="areaunitsqmm">square mm</string>
    <string name="areaunitsqm">square m</string>
    <string name="areaunitsqcm">square cm</string>
    <string name="areaunitsqkm">square km</string>
    <string name="areaunitsqmiles">square miles</string>
    <string name="areaunitsqyard">square yards</string>
    <string name="volumeunitmillilitres">millilitre</string>
    <string name="volumeunitlitres">litre</string>
    <string name="volumeunitcubicmm">cubic mm</string>
    <string name="volumeunitcubiccm">cubic cm</string>
    <string name="volumeunitcubicm">cubic m</string>
    <string name="volumeunitcubicfeet">cubic feet</string>

    <!-- Currency Converter -->
    <string name="one">One</string>
    <string name="in">In</string>
    <string name="equal">Is Equal To</string>
    <string name="result">Click Calculate for Result</string>
    <string name="calculate">Calculate</string>

    <string-array name="name">
        <item>Indian Rupee</item>
        <item>US Dollar</item>
        <item>European Union Euro</item>
        <item>Canadian Dollar</item>
        <item>Australian Dollar</item>
        <item>Singapore Dollar</item>
    </string-array>
    <string-array name="value">
        <item>INR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>SGD</item>
    </string-array>

    <!-- Notepad -->
    <string name="about">About</string>
    <string name="title">Title : </string>
    <string name="menu_delete">Delete Note</string>
    <string name="no_title">No Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_menu_noteedit">Save</string>
    <string name="delete_menu_noteedit">Delete</string>
    <string name="quit_back">Quit</string>

</resources>