<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center" 
    tools:context=".Main" >

    <Button
        style="@style/btnStyleBreakerBay"
        android:id="@+id/buttonconvert"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttoncomp"
        android:layout_below="@+id/buttoncomp"
        android:layout_marginTop="35dp"
        android:text="@string/convertapp" />

    <Button
        style="@style/btnStyleBreakerBay"
        android:id="@+id/buttoncurrency"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonconvert"
        android:layout_below="@+id/buttonconvert"
        android:layout_marginTop="35dp"
        android:text="@string/currencyapp" />

    <Button
        style="@style/btnStyleBreakerBay"
        android:id="@+id/buttonweather"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttoncurrency"
        android:layout_below="@+id/buttoncurrency"
        android:layout_marginTop="35dp"
        android:clickable="false"
        android:text="@string/weather" />

    <Button
        style="@style/btnStyleBreakerBay"
        android:id="@+id/buttonnote"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonweather"
        android:layout_below="@+id/buttonweather"
        android:layout_marginTop="35dp"
        android:clickable="false"
        android:text="@string/note" />

    <Button
        style="@style/btnStyleBreakerBay"
        android:id="@+id/buttoncomp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/compasstit" />

</RelativeLayout>